/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.4.1/userguide/tutorial_java_projects.html
 */



plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'
}

repositories {
    // Use jcenter for resolving your dependencies.
    // Yes, you can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs "src/main/java"
            srcDirs "src/tans/java"
        }
    }
    test {
        java {
            srcDirs "src/test/java"
            srcDirs "src/tans-test/java"
        }
    }
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

wrapper {
    gradleVersion = 5.3
}

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    implementation 'com.google.guava:guava:27.0.1-jre'
    implementation 'io.netty:netty-all:4.1.39.Final'
    //compile('io.netty:netty-example:4.1.39.Final')
    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.9.1'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    implementation group: 'com.beust', name: 'jcommander', version: '1.78'
    //implementation group: 'org.iq80.leveldb', name: 'leveldb', version: '0.12'
    //implementation group: 'org.iq80.leveldb', name: 'leveldb-api', version: '0.12'
    implementation group: 'org.pcollections', name: 'pcollections', version: '2.1.2'
    implementation group: 'org.fusesource.leveldbjni', name: 'leveldbjni-all', version: '1.8'
    // Use JUnit test framework
    testImplementation 'junit:junit:4.10'
}

// Define the main class for the application
mainClassName = 'org.axesoft.tans.server.ServerApp'
applicationDefaultJvmArgs = ['-server', '-Xmx1g', '-XX:+UseG1GC',
                             '-XX:MaxGCPauseMillis=10',
                             //'-XX:ParallelGCThreads=3',
                             '-XX:+AlwaysPreTouch',
                             '-XX:InitiatingHeapOccupancyPercent=60']
//                             '-Xlog:gc*']


//applicationDefaultJvmArgs = ['-server', '-Xmx1g', '-Xms1g',
//                             '-XX:+UnlockExperimentalVMOptions',
//                             '-XX:+UseZGC',
//                             '-Xlog:gc*']

//applicationDefaultJvmArgs = ['-server', '-Xmx1g', '-Xms1g',
//                             '-XX:+UseConcMarkSweepGC',
//                             '-XX:+CMSParallelRemarkEnabled',
//                             '-XX:PermSize=256m',
//                             '-Xlog:gc*']